// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "flex": 1,
        "flexDirection": "column",
        "height": 1334,
        "width": 750,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  />
  <View
    style={
      Object {
        "height": 1,
        "left": 0,
        "marginTop": 9,
        "right": 0,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    h1={false}
    h2={false}
    h3={false}
    h4={false}
    h5={false}
    onPress={null}
    p={false}
    style={
      Array [
        Object {
          "color": "#455a64",
          "fontFamily": "HelveticaNeue",
          "fontSize": 14,
          "fontWeight": "300",
          "lineHeight": 18,
        },
        Object {
          "textAlign": "center",
        },
      ]
    }
  >
    We can't find that
  </Text>
  <View
    style={
      Object {
        "height": 1,
        "left": 0,
        "marginTop": 19,
        "right": 0,
      }
    }
  />
</View>
`;

exports[`Error w/ Try Again Button renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "flex": 1,
        "flexDirection": "column",
        "height": 1334,
        "width": 750,
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  />
  <View
    style={
      Object {
        "height": 1,
        "left": 0,
        "marginTop": 9,
        "right": 0,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    h1={false}
    h2={false}
    h3={false}
    h4={false}
    h5={false}
    onPress={null}
    p={false}
    style={
      Array [
        Object {
          "color": "#455a64",
          "fontFamily": "HelveticaNeue",
          "fontSize": 14,
          "fontWeight": "300",
          "lineHeight": 18,
        },
        Object {
          "textAlign": "center",
        },
      ]
    }
  >
    Woops, Something went wrong.
  </Text>
  <View
    style={
      Object {
        "height": 1,
        "left": 0,
        "marginTop": 19,
        "right": 0,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "marginLeft": 15,
          "marginRight": 15,
        },
        false,
        Object {
          "marginLeft": 0,
          "marginRight": 0,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#9E9E9E",
              "flexDirection": "row",
              "justifyContent": "center",
              "padding": 19,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
            Object {
              "padding": 12,
            },
            undefined,
            undefined,
            undefined,
            Object {
              "borderColor": "#feab2b",
              "borderWidth": 1,
              "padding": 8,
            },
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {},
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                Object {
                  "color": "white",
                  "fontSize": 20,
                },
                Object {
                  "color": "#feab2b",
                },
                Object {
                  "fontSize": 17.5,
                },
                Object {
                  "fontSize": 12,
                },
                undefined,
                Object {
                  "fontWeight": "bold",
                },
                Object {
                  "fontFamily": "HelveticaNeue",
                },
              ],
            ]
          }
        >
          Try again
        </Text>
      </View>
    </View>
  </View>
</View>
`;
